# rust-saas-boilerplate

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs
src/migration/: m20260219_000001_create_users_table.rs  mod.rs
src/modules/health/: handler.rs  routes.rs
src/modules/users/: handler.rs
